fixed css for viewport (dials-wrapper) - displaying 3 rows of apps, scrollbar is aligned to the right, the entire viewport is centered

--- a/src/less/import/main.less
+++ b/src/less/import/main.less
@@ -29,6 +29,8 @@ html {
     -webkit-box-flex: 1;
     display: -webkit-box;
     -webkit-box-orient: vertical;
+    -webkit-box-pack: center;
+    -webkit-box-align: center;
   }
 }
 
