--- a/src/less/import/new-layout.less
+++ b/src/less/import/new-layout.less
@@ -22,7 +22,7 @@
             overflow-y: auto;
             overflow-x: hidden;
             margin-bottom:70px;
-            max-height: 430px;
+            max-height: 370px;
         }
         .dials-wrapper {
             display:none;
